--- a/views/layout/index.templ
+++ b/views/layout/index.templ
@@ -14,7 +14,7 @@ templ Base(title string) {
 			<link rel="shortcut icon" href="/img/templ.png" type="image/png"/>
 			<link rel="stylesheet" href="/css/styles.css"/>
 			<link rel="stylesheet" href="/css/static.css"/>
-			<link rel="icon" type="image/x-icon" href="/img/favicon.jpg"/>
+			// <link rel="icon" type="image/x-icon" href="/img/favicon.png"/>
 			<title>{ title }</title>
 			<script src="https://unpkg.com/htmx.org@1.9.9" integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX" crossorigin="anonymous"></script>
 			<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -31,10 +31,34 @@ templ Base(title string) {
 			<link rel="stylesheet" href="/css/static.css"/>
 			<script src="/js/keypress.js"></script>
 		</head>
-		<body hx-boost="true">
-			<layout class="pb-2">
+		<body hx-boost="true" class="dark:bg-terminal-base font-mono bg-terminal-base text-white leading-normal tracking-tighter">
+			<layout class="w-full h-dvh flex flex-col">
+			//Todo: refactor to a nav compoent
+				<header class="bg-primary flex justify-between items-center py-1 px-4">
+            	<div class="flex space-x-4">
+                	<button hx-get="/" hx-target="body" hx-swap="outerHTMX transition:true" class="text-white font-bold tracking-tight">home</button>
+                	<button hx-get="/about" hx-target="#commandDisplay" hx-swap="outerHTMX transition:true" class="text-white">readme</button>
+                	<button hx-get="/project" hx-target="#commandDisplay" hx-swap="outerHTMX transition:true" class="text-white">projects</button>
+                	<button hx-get="/blog" hx-target="#commandDisplay" hx-swap="outerHTMX transition:true" class="text-white">blog</button>
+            	</div>
+            		<div class="flex items-center space-x-2">
+                		<span class="text-white btn btn-ghost btn-xs">LinkedIn</span>
+                		<span class="text-white btn btn-ghost btn-xs">Github</span>
+            		</div>
+        		</header>
+				
+				<div id="content" class="h-full">
 					{ children... }
+				</div>
+
+				//Todo: refactor to a footer component
+				<footer class="bg-primary flex justify-between items-center">
+					<span id="currentText" class="bg-secondary-500 text-white px-2 text-sm">home.txt</span>
+					<span id="errorText" class="bg-error-base text-white px-2 text-sm">Errors</span>
+				</footer>
+			
 			</layout>
+			
 			<script lang="js">
 			     document.body.addEventListener('htmx:beforeSwap', function(evt) {
 			    if(evt.detail.xhr.status === 404){
