--- a/views/layout/index.templ
+++ b/views/layout/index.templ
@@ -2,7 +2,7 @@ package layout
 
 templ Base(title string) {
 	<!DOCTYPE html>
-	<html lang="en" data-theme="">
+	<html lang="en" data-theme="dark" class="dark">
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -28,27 +28,46 @@ templ Base(title string) {
                 /* Script to toggle light and  mode */
             </script>
 			// <script src="/js/confirm.js" defer></script>
-			<link rel="stylesheet" href="/css/static.css"/>
 			<script src="/js/keypress.js"></script>
 		</head>
 		<body hx-boost="true" class="dark:bg-terminal-base font-mono bg-terminal-base text-white leading-normal tracking-tighter">
-			<layout class="w-full h-dvh flex flex-col">
+			<layout class="w-full h-screen flex flex-col">
 			//Todo: refactor to a nav compoent
-				<header class="bg-primary flex justify-between items-center py-1 px-4">
+			<header class="bg-primary flex justify-between items-center py-1 px-4">
             	<div class="flex space-x-4">
-                	<button hx-get="/" hx-target="body" hx-swap="outerHTMX transition:true" class="text-white font-bold tracking-tight">home</button>
-                	<button hx-get="/about" hx-target="#commandDisplay" hx-swap="outerHTMX transition:true" class="text-white">readme</button>
-                	<button hx-get="/project" hx-target="#commandDisplay" hx-swap="outerHTMX transition:true" class="text-white">projects</button>
-                	<button hx-get="/blog" hx-target="#commandDisplay" hx-swap="outerHTMX transition:true" class="text-white">blog</button>
+					//fix this home link
+                	<button hx-get="/" hx-target="body" hx-swap="transition:true" class="text-white font-bold tracking-tight">home</button>
+                	<button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white">readme</button>
+                	<button hx-get="/project" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white">projects</button>
+                	<button hx-get="/blog" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white">blog</button>
             	</div>
             		<div class="flex items-center space-x-2">
                 		<span class="text-white btn btn-ghost btn-xs">LinkedIn</span>
                 		<span class="text-white btn btn-ghost btn-xs">Github</span>
             		</div>
-        		</header>
+        	</header>
 				
-				<div id="content" class="h-full">
+				<div id="commandDisplay" class="flex flex-col h-screen flex-grow py-6 mt-4">
 					{ children... }
+				</div>
+
+			<div 
+				class="py-8 group flex h-8 items-center hover:bg-terminal-hover">	
+				<div class="bg-primary-400 w-[2px] h-[30px] shrink-0 animate-blink"></div>
+				<form 
+					hx-post="/commands"
+					hx-target="#commandDisplay"			
+					hx-swap="innerHTML transition:true"	
+					hx-on::after-request="this.reset()"	>
+						<input 
+							name="command"
+							id="commandBox"
+							type="text" 
+							autocomplete="off"
+							placeholder="$ enter command here"
+							class="px-4 border-none focus:ring-transparent text-white leading-tight bg-transparent"
+						/>
+					</form>
 				</div>
 
 				//Todo: refactor to a footer component
