--- a/views/layout/index.templ
+++ b/views/layout/index.templ
@@ -39,7 +39,7 @@ templ Base(title string) {
                 	<button hx-get="/" hx-target="body" hx-swap="transition:true" class="text-white font-bold tracking-tight">home</button>
                 	<button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white">readme</button>
                 	<button hx-get="/project" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white">projects</button>
-                	<button hx-get="/blog" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white">blog</button>
+                	<button hx-get="/blog" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white" disabled>blog <span class="text-xs">(coming soon)</span></button>
             	</div>
             		<div class="flex items-center space-x-2">
                 		<span class="text-white btn btn-ghost btn-xs">LinkedIn</span>
