pushing oob update

--- a/views/about/about.templ
+++ b/views/about/about.templ
@@ -26,6 +26,7 @@ templ AboutWithoutLayoutComponent(){
 			</div>
 			</pre>
 	</div>
+	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-sm">readme.txt</span>
 }
 
 templ About(){
