--- a/views/project/project.templ
+++ b/views/project/project.templ
@@ -36,4 +36,5 @@ templ Project(data *models.PinnedItems){
 			}
 		</div>
     </div>
+	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-sm">project.txt</span>
 }
