--- a/views/layout/index.templ
+++ b/views/layout/index.templ
@@ -14,7 +14,7 @@ templ Base(title string) {
 			<link rel="shortcut icon" href="/img/templ.png" type="image/png"/>
 			<link rel="stylesheet" href="/css/styles.css"/>
 			<link rel="stylesheet" href="/css/static.css"/>
-			// <link rel="icon" type="image/x-icon" href="/img/favicon.png"/>
+			<link rel="icon" type="image/x-icon" href="/img/favicon.ico"/>
 			<title>{ title }</title>
 			<script src="https://unpkg.com/htmx.org@1.9.9" integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX" crossorigin="anonymous"></script>
 			<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -72,7 +72,7 @@ templ Base(title string) {
 
 				//Todo: refactor to a footer component
 				<footer class="bg-primary flex justify-between items-center">
-					<span id="currentText" class="bg-secondary-500 text-white px-2 text-sm">home.txt</span>
+					<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-sm">home.txt</span>
 					<span id="errorText" class="bg-error-base text-white px-2 text-sm">Errors</span>
 				</footer>
 			
