file based routing added

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -759,10 +759,6 @@ body {
   margin-bottom: auto;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
 .ml-6 {
   margin-left: 1.5rem;
 }
@@ -805,10 +801,6 @@ body {
 
 .h-screen {
   height: 100vh;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .w-5 {
@@ -1139,6 +1131,12 @@ body {
 .has-\[\:focus\]\:outline-none:has(:focus) {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+@media (min-width: 768px) {
+  .md\:w-1\/2 {
+    width: 50%;
+  }
 }
 
 .dark\:bg-terminal-base:where(.dark, .dark *) {
