--- a/views/layout/index.templ
+++ b/views/layout/index.templ
@@ -28,7 +28,7 @@ templ Base(title string) {
                 /* Script to toggle light and  mode */
             </script>
 			// <script src="/js/confirm.js" defer></script>
-			<script src="/js/keypress.js"></script>
+			<script type="module" src="/js/launch.js"></script>
 		</head>
 		<body hx-boost="true" class="dark:bg-terminal-base font-mono bg-terminal-base text-white leading-normal tracking-tighter">
 			<layout class="w-full h-screen flex flex-col">
