--- a/assets/css/static.css
+++ b/assets/css/static.css
@@ -1,3 +1,18 @@
 input:focus {
     outline: none;
   }
+
+.htmx-indicator{
+    display: none;
+    opacity:0;
+    transition: opacity 500ms ease-in;
+}
+
+.htmx-request.htmx-indicator{
+    display: block;
+    opacity:1
+}
+
+.htmx-indicator.htmx-request~span {
+  display: none;
+}
