--- a/views/about/about.templ
+++ b/views/about/about.templ
@@ -1,11 +1,11 @@
 package about
 
-templ AboutWithoutLayoutComponent(){
+templ AboutWithoutLayoutComponent() {
 	<div class="h-full flex-grow px-4">
-        <div class="group flex h-8 items-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
+		<div class="group flex h-8 items-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
 			<span class="text-xl font bold pb-8">About</span>
 		</div>
-            <pre class="text-white flex flex-col gap-4">
+		<pre class="text-white flex flex-col gap-4">
 			<div tabindex="0" number="1" class="group px-4 flex h-8 items-center text-gray-500 hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-white active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-white focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
 				1. hi my name harish gokul. i am a junior software engineer
 			</div>
@@ -15,21 +15,26 @@ templ AboutWithoutLayoutComponent(){
 			<div tabindex="0" number="3" class="group px-4 flex h-8 items-center text-gray-500 hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-white active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-white focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
 				3. i am an upcoming masters grad at UC Davis.
 			</div>
-			<div tabindex="0" number="4" 
-                class="group text-wrap px-4 py-2 flex h-auto items-center text-gray-500 hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-white active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-white focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
+			<div
+				tabindex="0"
+				number="4"
+				class="group text-wrap px-4 py-2 flex h-auto items-center text-gray-500 hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-white active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-white focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none"
+			>
 				4. at my work, i started off as a JS/TS dev developing frontend features and backend REST API's to a wider tech stack where i develop full stack apps, write ETL pipelines,perform data migration
-                and use golang to do build out my side projects.
+				and use golang to do build out my side projects.
 			</div>
-			<div tabindex="0" number="4" 
-                class="group text-wrap px-4 flex h-auto items-center text-gray-500 hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-white active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-white focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
+			<div
+				tabindex="0"
+				number="4"
+				class="group text-wrap px-4 flex h-auto items-center text-gray-500 hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-white active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-white focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none"
+			>
 				5. outside of nerding out on tech stuff, i love basketball and american football. 
 			</div>
-			</pre>
+		</pre>
 	</div>
 	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-sm">readme.txt</span>
 }
 
-templ About(){
-    @AboutWithoutLayoutComponent()
-    
+templ About() {
+	@AboutWithoutLayoutComponent()
 }
