--- a/views/project/project.templ
+++ b/views/project/project.templ
@@ -12,7 +12,7 @@ templ renderProjectRow(idx int, row models.Edge) {
 			target="_blank"
 			tabindex="0"
 			number={ strconv.Itoa(idx + 1) }
-			class="flex flex-row group flex items-center  active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none [&>svg]:hover:block [&>svg]:active:text-gray-11"
+			class="flex flex-row group items-center  active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none [&>svg]:hover:block [&>svg]:active:text-gray-11"
 		>
 			<span>{ strconv.Itoa(idx+1) }. { row.Node.Name }</span>
 			<span class="text-gray-500 px-4">{ row.Node.Description }</span>
