--- a/views/help/help.templ
+++ b/views/help/help.templ
@@ -6,14 +6,14 @@ import (
 )
 
 templ renderHelpRow(idx int, command models.Commands) {
-	<div tabindex="0" number={ strconv.Itoa(idx + 1) } class="flex flex-row justify-between group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
+	<div tabindex="0" number={ strconv.Itoa(idx + 1) } class="flex-row justify-between group flex h-8 items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
 		<span>{ strconv.Itoa(idx+1) }. { command.Command }</span>
 		<span class="text-gray-500 px-4">{ command.Description }</span>
 	</div>
 }
 
 templ Help(commands []models.Commands) {
-	<div class="h-full flex-grow p-4 w-full md:w-1/2 border-dashed border-2 justify-center my-auto">
+	<div class="h-full flex-grow p-4 w-full md:w-1/2 border-dashed border-2 justify-center my-auto mx-auto">
 		<div class="p-4 group py-8 flex h-8 items-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
 			<span class="text-xl font bold">Help</span>
 		</div>
