--- a/views/project/project.templ
+++ b/views/project/project.templ
@@ -6,16 +6,16 @@ import (
 )
 
 templ renderProjectRow(idx int, row models.Edge) {
-	<div class="flex flex-col p-2 h-auto gap-2 hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2">
+	<li class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
 		<a
 			href={ templ.URL(row.Node.URL) }
 			target="_blank"
 			tabindex="0"
 			number={ strconv.Itoa(idx + 1) }
-			class="flex flex-row group items-center  active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none [&>svg]:hover:block [&>svg]:active:text-gray-11"
+			class="flex flex-row group items-center active:border-primary-400 active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none [&>svg]:hover:block [&>svg]:active:text-gray-11"
 		>
 			<span>{ strconv.Itoa(idx+1) }. { row.Node.Name }</span>
-			<span class="text-gray-500 px-4">{ row.Node.Description }</span>
+			<span class="px-4">{ row.Node.Description }</span>
 			<svg class="hidden w-5 h-5 ml-6 text-gray-10 shrink-0" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="square-arrow-top-right, open, new, link, open link, box, arrow"><path class="stroke-current" d="M15.2083 11.6667V16.875H3.125V4.79167H7.70833M11.4583 3.125H16.875V8.54167M9.16667 10.8333L16.25 3.75" stroke-width="1.5" stroke-linecap="square"></path></g></svg>
 		</a>
 		// <div class="flex flex-row space-x-4 justify-end mr-8">
@@ -23,7 +23,7 @@ templ renderProjectRow(idx int, row models.Edge) {
 		// 	@renderLanguages(node)
 		// }
 		// </div>
-	</div>
+	</li>
 }
 
 templ renderLanguages(data models.LanguageEdge) {
@@ -31,15 +31,15 @@ templ renderLanguages(data models.LanguageEdge) {
 }
 
 templ Project(data *models.PinnedItems) {
-	<div class="h-full flex-grow px-4">
+	<div class="h-full flex px-4 flex-col flex-grow justify-center mx-auto">
 		<div class="group flex h-8 items-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-			<span class="text-xl font bold pb-8">Project</span>
+			<span class="text-4xl font bold pb-16 mx-auto">Projects</span>
 		</div>
-		<div class="text-white flex flex-col gap-2 my-auto h-full">
+		<ul class="text-gray-500 flex flex-col gap-4 py-2 mx-auto">
 			for idx,project := range data.Edges {
 				@renderProjectRow(idx, project)
 			}
-		</div>
+		</ul>
 	</div>
 	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-sm">project.txt</span>
 }
