--- a/views/about/about.templ
+++ b/views/about/about.templ
@@ -2,8 +2,8 @@ package about
 
 templ AboutWithoutLayoutComponent() {
 	<div class="h-full flex-grow px-4 flex flex-col justify-center mx-auto">
-		<div class="group flex w-full h-8 items-center justify-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-			<span class="text-3xl font bold pb-16">Readme</span>
+ 	 <div class="group flex w-full h-8 items-center justify-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
+			<span class="text-3xl font bold py-8">Readme</span>
 		</div>
 		<ul id="list" class="text-gray-500 flex flex-col gap-4 py-2 w-3/4 mx-auto" role="listbox" aria-activedescendant="item1">
 			<li tabindex="0" id="item1" number="1" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
