--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2403,6 +2403,14 @@ body {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-e-lg {
   border-start-end-radius: 0.5rem;
   border-end-end-radius: 0.5rem;
@@ -2421,6 +2429,16 @@ body {
 .rounded-s-lg {
   border-start-start-radius: 0.5rem;
   border-end-start-radius: 0.5rem;
+}
+
+.rounded-r-md {
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+
+.rounded-l-md {
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
 }
 
 .border-2 {
@@ -2500,6 +2518,10 @@ body {
   padding-bottom: 4rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
@@ -2572,6 +2594,39 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\#89B3F9\] {
+  --tw-text-opacity: 1;
+  color: rgb(137 179 249 / var(--tw-text-opacity));
+}
+
+.text-\[\#\#FAE3B0\] {
+  color: ##FAE3B0;
+}
+
+.text-\[\#FAE3B0\] {
+  --tw-text-opacity: 1;
+  color: rgb(250 227 176 / var(--tw-text-opacity));
+}
+
+.text-\[\#7FA8E9\] {
+  --tw-text-opacity: 1;
+  color: rgb(127 168 233 / var(--tw-text-opacity));
+}
+
+.text-\[\#98CDA1\] {
+  --tw-text-opacity: 1;
+  color: rgb(152 205 161 / var(--tw-text-opacity));
+}
+
+.text-\[\#\#7DD68C\] {
+  color: ##7DD68C;
+}
+
+.text-\[\#7DD68C\] {
+  --tw-text-opacity: 1;
+  color: rgb(125 214 140 / var(--tw-text-opacity));
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2639,6 +2694,11 @@ body {
 }
 
 .hover\:bg-terminal-hover:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 36 52 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-primary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 36 52 / var(--tw-bg-opacity));
 }
