--- a/views/help/help.templ
+++ b/views/help/help.templ
@@ -23,5 +23,5 @@ templ Help(commands []models.Commands) {
 			}
 		</pre>
 	</div>
-	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-sm">help.txt</span>
+	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-md rounded-r-md">help.txt</span>
 }
