--- a/views/home/home.templ
+++ b/views/home/home.templ
@@ -9,8 +9,8 @@ templ HomeComponent() {
 			<span class="text-3xl font bold pb-16">Introduction</span>
 		</div>
 		<ul id="list" class="text-gray-500 flex flex-col gap-4 py-2" role="listbox" aria-activedescendant="item1">
-			<li tabindex="0" id="item1" number="1" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 1. hi my name harish gokul. I use neovim btw. I have ditched VSCode now</span>
+			<li tabindex="0" id="item1" number="1" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:bor er-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
+				<span class="px-4"># 1. hi my name harish. I use neovim btw. this is going to be my personality for a while. Please visit my readme to akshually know about me. </span>
 			</li>
 			<li tabindex="0" id="item2" number="2" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
 				<span class="px-4"># 2. hit "i" to get into insert mode.</span>
@@ -22,7 +22,7 @@ templ HomeComponent() {
 				<span class="px-4"># 4. use "help" to list out all options</span>
 			</li>
 			<a href="https://github.com/harish876/hypefx" target="_blank" id="item1" tabindex="0" number="5" role="option" class="group flex h-auto p-6 items-center hover:bg-terminal-hover hover:text-white focus:text-white hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none [&>svg]:hover:block [&>svg]:active:text-gray-11">
-				<span class="px-4"># 5. this was project was built using go and htmx and uses this repo. (Click to go to the repo)</span>
+				<span class="px-4"># 5. this was project was built using my custom framework for building web apps in go and htmx. (Click to go to the repo)</span>
 				<svg class="hidden w-5 h-5 ml-6 text-gray-10 shrink-0" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="square-arrow-top-right, open, new, link, open link, box, arrow"><path class="stroke-current" d="M15.2083 11.6667V16.875H3.125V4.79167H7.70833M11.4583 3.125H16.875V8.54167M9.16667 10.8333L16.25 3.75" stroke-width="1.5" stroke-linecap="square"></path></g></svg>
 			</a>
 		</ul>
