--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2104,27 +2104,6 @@ body {
       var(--handleoffsetcalculator) 0 0 3px var(--fallback-bc,oklch(var(--bc)/1)) inset;
 }
 
-.btn-xs {
-  height: 1.5rem;
-  min-height: 1.5rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  font-size: 0.75rem;
-}
-
-.btn-square:where(.btn-xs) {
-  height: 1.5rem;
-  width: 1.5rem;
-  padding: 0px;
-}
-
-.btn-circle:where(.btn-xs) {
-  height: 1.5rem;
-  width: 1.5rem;
-  border-radius: 9999px;
-  padding: 0px;
-}
-
 .tooltip {
   position: relative;
   display: inline-block;
@@ -2403,10 +2382,6 @@ body {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -2421,14 +2396,14 @@ body {
   border-bottom-left-radius: 0.5rem;
 }
 
+.rounded-l-md {
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
 .rounded-r-lg {
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-}
-
-.rounded-s-lg {
-  border-start-start-radius: 0.5rem;
-  border-end-start-radius: 0.5rem;
 }
 
 .rounded-r-md {
@@ -2436,9 +2411,9 @@ body {
   border-bottom-right-radius: 0.375rem;
 }
 
-.rounded-l-md {
-  border-top-left-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
+.rounded-s-lg {
+  border-start-start-radius: 0.5rem;
+  border-end-start-radius: 0.5rem;
 }
 
 .border-2 {
@@ -2455,7 +2430,7 @@ body {
 
 .bg-error-base {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 139 168 / var(--tw-bg-opacity));
+  background-color: rgb(241 138 167 / var(--tw-bg-opacity));
 }
 
 .bg-gray-200 {
@@ -2522,8 +2497,8 @@ body {
   padding-bottom: 2rem;
 }
 
-.font-mono {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+.font-nvim {
+  font-family: JetBrainsMono, Nerd Font, Monospace;
 }
 
 .text-3xl {
@@ -2594,39 +2569,6 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\#89B3F9\] {
-  --tw-text-opacity: 1;
-  color: rgb(137 179 249 / var(--tw-text-opacity));
-}
-
-.text-\[\#\#FAE3B0\] {
-  color: ##FAE3B0;
-}
-
-.text-\[\#FAE3B0\] {
-  --tw-text-opacity: 1;
-  color: rgb(250 227 176 / var(--tw-text-opacity));
-}
-
-.text-\[\#7FA8E9\] {
-  --tw-text-opacity: 1;
-  color: rgb(127 168 233 / var(--tw-text-opacity));
-}
-
-.text-\[\#98CDA1\] {
-  --tw-text-opacity: 1;
-  color: rgb(152 205 161 / var(--tw-text-opacity));
-}
-
-.text-\[\#\#7DD68C\] {
-  color: ##7DD68C;
-}
-
-.text-\[\#7DD68C\] {
-  --tw-text-opacity: 1;
-  color: rgb(125 214 140 / var(--tw-text-opacity));
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2693,12 +2635,12 @@ body {
   border-left-width: 2px;
 }
 
-.hover\:bg-terminal-hover:hover {
+.hover\:bg-primary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 36 52 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-primary:hover {
+.hover\:bg-terminal-hover:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 36 52 / var(--tw-bg-opacity));
 }
