--- a/views/layout/index.templ
+++ b/views/layout/index.templ
@@ -49,15 +49,15 @@ templ Base(title string) {
 				</div>
 				<footer class="flex md:flex-row justify-between items-center p-4 rounded-lg">
 					<div class="flex md:flex-row sm:space-y-0 md:space-x-4">
-						<span id="currentText" class="bg-secondary-500 text-white px-2 text-lg rounded-r-md">home.txt</span>
+						<span id="currentText" class="bg-secondary-500 text-white px-2 text-md rounded-r-md">home.txt</span>
 						<span id="spinner" class="loading loading-infinity loading-sm htmx-indicator"></span>
 					</div>
 					<div class="flex md:flex-row sm:space-y-0 md:space-x-4">
-						<span id="tabSize" class="text-white px-2 text-lg hover:bg-primary cursor-pointer">Ln 81, Col 122</span>
-						<span class="hidden md:block text-white px-2 text-lg hover:bg-primary cursor-pointer tooltip" data-tip="htmx">htmx</span>
-						<span class="hidden md:block text-white px-2 text-lg hover:bg-primary cursor-pointer tooltip">templ</span>
-						<span id="tabSize" class="hidden md:block text-white px-2 text-lg hover:bg-primary-400 cursor-pointer">Tab Size: 4</span>
-						<span id="errorText" class="bg-error-base text-white px-2 text-lg rounded-l-md">nvim</span>
+						<span id="tabSize" class="text-white px-2 text-md hover:bg-primary cursor-pointer">Ln 81, Col 122</span>
+						<span class="hidden md:block text-white px-2 text-md hover:bg-primary cursor-pointer tooltip" data-tip="htmx">htmx</span>
+						<span class="hidden md:block text-white px-2 text-md hover:bg-primary cursor-pointer tooltip">templ</span>
+						<span id="tabSize" class="hidden md:block text-white px-2 text-md hover:bg-primary-400 cursor-pointer">Tab Size: 4</span>
+						<span id="errorText" class="bg-error-base text-white px-2 text-md rounded-l-md">nvim</span>
 					</div>
 				</footer>
 			</div>
