--- a/views/project/project.templ
+++ b/views/project/project.templ
@@ -41,5 +41,5 @@ templ Project(data *models.PinnedItems) {
 			}
 		</ul>
 	</div>
-	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-lg rounded-r-md">project.txt</span>
+	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-md rounded-r-md">project.txt</span>
 }
