--- a/views/about/about.templ
+++ b/views/about/about.templ
@@ -30,7 +30,7 @@ templ AboutWithoutLayoutComponent() {
 			</li>
 		</ul>
 	</div>
-	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-lg rounded-r-md">readme.txt</span>
+	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-md rounded-r-md">readme.txt</span>
 }
 
 templ About() {
